--- a/css/reset.css
+++ b/css/reset.css
@@ -26,7 +26,7 @@ body { width: 100%; height: 100%; font-family: "微软雅黑"; font-size: 14px; 
 .login { margin-right: 67px;}
 .top_white { width: 1024px; height: 80px; color: .313131;}
 .logo { width: 60px; height: 60px; margin-top: 10px; background-color: #bfbfbf;}
-.top_white .nav { width: 346px; height: 50px; margin-top: 10px;}
+.top_white .nav { width: auto; height: 50px; margin-top: 10px;}
 .top_white .nav li {border-right:1px solid #b9e5fa;text-align: center; height: 50px; line-height: 50px; font-size: 18px; float: left;padding: 0 40px;}
 .top_white .nav .font{ color:#000; }
 .banner { width: 100%; height: 380px; background-color: #088ae0;}
