--- a/css/reset.css
+++ b/css/reset.css
@@ -18,7 +18,7 @@ a { text-decoration: none; color: white; margin: 0; padding: 0;}
 .block { display: block;}
 
 body { width: 100%; height: 100%; font-family: "微软雅黑"; font-size: 14px; background-color: #eeeeee; min-width: 1024px;}
-.top { width: 100%; height: 110px; background-image: url("../img/top_bg.png"); background-repeat: repeat-x;}
+.top { width: 100%;}
 .top_black { width: 1024px; height: 30px; color: white; background-color: .313131;}
 .top_black span { height: 30px; line-height: 30px;}
 .infor { margin-right: 20px;}
