--- a/css/style.css
+++ b/css/style.css
@@ -10,11 +10,6 @@ img {
   border: 0;
   vertical-align: middle; }
 
-body {
-  color: #000000;
-  background: #FFF;
-  text-align: center; }
-
 .clear {
   clear: both;
   height: 1px;
@@ -46,7 +41,7 @@ a {
 #nav {
   width: 100%;
   height: 60px;
-  background: #00A2CA;
+  background: #088AE0;
   margin: 0 auto; }
   #nav li {
     display: inline;
@@ -60,4 +55,74 @@ a {
       font-size: 16px;
       text-decoration: none; }
       #nav li a:hover {
-        background: #0095BB; }
+        background-color: #0B5AA9; }
+  #nav .active a {
+    background-color: #0B5AA9; }
+
+.main-container {
+  width: 100%; }
+
+.product-info {
+  position: relative; }
+  .product-info li {
+    float: left;
+    height: 33.333%;
+    padding: 0;
+    overflow: hidden; }
+    .product-info li img {
+      width: 100%;
+      overflow: hidden;
+      transition: ALL 0.4s ease-in-out;
+      -webkit-transition: ALL 0.4s ease-in-out;
+      -moz-transition: ALL 0.4s ease-in-out;
+      -o-transition: ALL 0.4s ease-in-out;
+      -ms-transition: ALL 0.4s ease-in-out; }
+    .product-info li .shadow {
+      position: absolute;
+      width: 100%;
+      height: 100%;
+      top: 0;
+      border-radius: 100%; }
+      .product-info li .shadow .nav {
+        display: none;
+        position: absolute;
+        z-index: 3;
+        width: 100%;
+        height: 100%;
+        background-color: #000000;
+        opacity: 0.8;
+        -moz-opcity: 0.8;
+        filter: alpha(opacity=80);
+        transition: ALL 0.4s ease-in-out;
+        -webkit-transition: ALL 0.4s ease-in-out;
+        -moz-transition: ALL 0.4s ease-in-out;
+        -o-transition: ALL 0.4s ease-in-out;
+        -ms-transition: ALL 0.4s ease-in-out; }
+    .product-info li:hover .nav, .product-info li:hover .content {
+      display: block;
+      transform: scale(1.05);
+      -webkit-transform: scale(1.05);
+      -moz-transform: scale(1.05);
+      -o-transform: scale(1.05);
+      -ms-transform: scale(1.05); }
+    .product-info li:hover img {
+      transform: scale(1.05);
+      -webkit-transform: scale(1.05);
+      -moz-transform: scale(1.05);
+      -o-transform: scale(1.05);
+      -ms-transform: scale(1.05); }
+
+.content {
+  position: absolute;
+  display: none;
+  z-index: 9;
+  top: 45%;
+  left: 30%; }
+  .content .glyphicon, .content a {
+    color: #B93030;
+    font-size: 24px; }
+
+.footer {
+  padding: 20px 0 0 0; }
+  .footer .ft_wrap {
+    padding: 0; }
