--- a/css/style.scss
+++ b/css/style.scss
@@ -3,6 +3,25 @@
     -moz-box-sizing:$sizing;
     box-sizing:$sizing;
 }
+@mixin opacity($size){
+	opacity: $size/100;
+	-moz-opcity:$size/100;
+	filter: alpha(opacity=$size);
+}
+@mixin transform($info){
+	transform:$info;
+	-webkit-transform:$info;
+	-moz-transform:$info;
+	-o-transform:$info;
+	-ms-transform:$info;
+}
+@mixin transition($time){
+	transition:ALL $time ease-in-out;
+	-webkit-transition:ALL $time ease-in-out;
+	-moz-transition:ALL $time ease-in-out;
+	-o-transition:ALL $time ease-in-out;
+	-ms-transition:ALL $time ease-in-out;
+}
 //------------------------------------------------------------------ 
 body, div, ul, li{
 	margin:0; padding:0;font-style: normal;
@@ -12,9 +31,6 @@ ol, ul ,li{
 }
 img {
 	border: 0; vertical-align:middle;
-}
-body{
-	color:#000000;background:#FFF; text-align:center;
 }
 .clear{
 	clear:both;height:1px;width:100%; overflow:hidden; margin-top:-1px;
@@ -31,25 +47,92 @@ a{
 .pd5{ padding-top:5px}
 .dis{display:block}
 .undis{display:none}
-	#nav{
-		width:100%; 
-		height:60px; 
-		background:#00A2CA;
-		margin:0 auto;
-		li{
-			display:inline; 
-			height:60px;
-			a{
-				display:inline-block; 
-				padding:0 20px; 
-				height:60px; 
-				line-height:60px; 
-				color:#FFF; 
-				font-size:16px;
-				text-decoration:none;
-				&:hover{
-					background:#0095BB;
-				}
+#nav{
+	width:100%; 
+	height:60px; 
+	background:#088AE0;
+	margin:0 auto;
+	li{
+		display:inline; 
+		height:60px;
+		a{
+			display:inline-block; 
+			padding:0 20px; 
+			height:60px; 
+			line-height:60px; 
+			color:#FFF; 
+			font-size:16px;
+			text-decoration:none;
+			&:hover{
+				background-color: #0B5AA9;
 			}
 		}
 	}
+	.active a{
+		background-color: #0B5AA9;
+	}
+}
+.main-container{
+	width: 100%;
+}
+.product-info{
+	position: relative;
+	li{
+		float: left;
+		height: 33.333%;
+		padding: 0;
+		overflow: hidden;
+		img{
+			width: 100%;
+			overflow: hidden;
+			@include transition(0.4s);
+
+		}
+
+		.shadow{
+			position: absolute;
+			width:100%;
+			height: 100%;
+			top:0;
+			border-radius: 100%;
+
+			.nav{
+				display: none;
+				position: absolute;
+				z-index: 3;
+				width: 100%;
+				height: 100%;
+				background-color: #000000;
+				@include opacity(80);
+				@include transition(0.4s);
+			}
+		}
+		&:hover{
+			.nav,.content{
+				display: block;
+				@include transform(scale(1.05));
+			}
+			img{
+				@include transform(scale(1.05));
+			}
+
+		}
+	}
+}
+.content{
+	position: absolute;
+	display:none;
+	z-index:9;
+	top:45%;
+	left:30%;
+	.glyphicon,a{
+		color: #B93030;
+		font-size: 24px;
+	}
+}
+.footer{
+	padding: 20px 0 0 0;
+	.ft_wrap{
+		padding: 0;
+	}
+}
