--- a/css/reset.css
+++ b/css/reset.css
@@ -31,7 +31,7 @@ body { width: 100%; height: 100%; font-family: "微软雅黑"; font-size: 14px; 
 .top_white .nav .font{ color:#000; }
 .banner { width: 100%; height: 380px; background-color: #088ae0;}
 .ban_main { width: 1024px; height: 380px; background-color: #088ae0; }
-.ban_main img { margin: 70px 0 0 28px;}
+.ban_main img { margin: 0px auto;}
 .login_register { width: 300px; height: 240px; margin: 70px 0 0 324px; background-color: #055386; }
 .login_register input { width: 220px; height: 14px; font-size: 14px; color: .6d6e71; padding: 10px; float: left; }
 .login_register span { color: white; font-size: 14px;}
